# vllm-projects

./: .gitignore  AGENTS.md  build.sh  build_from_wheels.sh  pyproject.toml  pyrightconfig.json  skills-lock.json
.agents/skills/vllm-managed-hotload/: README.md  SKILL.md
.agents/skills/vllm-managed-hotload/scripts/: mangage_hotload_vllm.py
.claude/agents/linter/: agent.yml
.claude/skills/: vllm-managed-hotload
.claude/skills/vllm-managed-hotload/: README.md
.github/skills/vllm-managed-hotload/: SKILL.md
.hotloadctl/: ray-vllm-qwen3-32b-tp8x3.json  serve_config.yaml
PR/: hotload_vllm.md  hotload_vllm_walkthrough.ipynb  run_hotload_vllm_e2e.sh  status.md
demo/: ray_serve_qwen3_1p7b_2nodes.py  ray_serve_qwen3_1p7b_dp3_node_pinned.py  ray_serve_qwen3_1p7b_single_gpu.py  ray_serve_qwen3_32b_tp8_single_node.py  ray_serve_qwen3_4b_single_gpu.py  ray_serve_qwen3_8b_tp2_dp3_node_pinned.py  ray_serve_qwen3_8b_tp2_single_node.py  ray_serve_qwen3p6_27b_tp4_single_node.py  ray_serve_text_llm_recipes.py
docs/: ray-serve-vllm-compatibility.md
docs/recipe/: README.md  qwen3-1p7b-dp3-node-pinned.md  qwen3-1p7b-single-gpu.md  qwen3-32b-tp8-single-node.md  qwen3-4b-single-gpu.md  qwen3-8b-tp2-dp3-node-pinned.md  qwen3-8b-tp2-single-node.md  qwen3p6-27b-tp4-single-node.md
src/vllm_hotload/: __init__.py  hf_push_ipc.py  hotloadctl.py  managed_hotload.py  proxy.py  ray_serve_app.py  ray_serve_text_llm_recipes.py  ray_vllm.py
tests/: test_hotloadctl.py  test_lint_cache.py  test_packaging_regression.py  test_ram_stage_loader.py
tools/: lint.py
vllm_patch/examples/managed_weight_sync/: hf_push_ipc.py
vllm_patch/vllm/: __init__.py
vllm_patch/vllm/entrypoints/cli/: __init__.py  main.py
vllm_patch/vllm/entrypoints/openai/: cli_args.py  managed_weight_sync.py
vllm_patch/vllm/entrypoints/pooling/score/: __init__.py  protocol.py
vllm_patch/vllm/entrypoints/serve/: __init__.py
vllm_patch/vllm/model_executor/: __init__.py
vllm_patch/vllm/model_executor/model_loader/: __init__.py  default_loader.py  ram_stage.py
