[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-hotload-workspace"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "ray[serve]==2.55.1",
]

[project.scripts]
hotloadctl = "vllm_hotload.hotloadctl:main"
vllm-hotload-hf-push-ipc = "vllm_hotload.hf_push_ipc:main"

[tool.setuptools.packages.find]
where = ["src", "vllm_patch"]
include = ["vllm_hotload*", "vllm", "vllm.*"]
